Added links to documentation, removed apology, changed factoria(42) to factorial(7)

--- a/lessons/thw-python/data-structures/data_structures.ipynb
+++ b/lessons/thw-python/data-structures/data_structures.ipynb
@@ -435,7 +435,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "There's a ton more to know about lists, but lets press on. Check out Dive Into Python or the help documentation for more info."
+      "There's a ton more to know about lists, but let's press on. Check out [Dive Into Python](http://www.diveintopython.net/toc/index.html) or the [Python documentation](http://docs.python.org/2/) for more info."
      ]
     },
     {
@@ -494,7 +494,7 @@
       "\n",
       "\n",
       "\n",
-      "Most introductory python courses do not go over sets this early (or at all), but I've found this data type to be useful. The python set type is similar to the idea of a mathematical set: it is an unordered collection of unique things. Consider:"
+      "The python set type is similar to the idea of a mathematical set: it is an unordered collection of unique things. Consider:"
      ]
     },
     {
@@ -562,7 +562,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "You can check out more info using the help docs. We won't be returning to sets, but its good for you to know they exist."
+      "You can read more in the [sets documentation](http://docs.python.org/2/library/sets.html)."
      ]
     },
     {
@@ -644,7 +644,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "data_dict[\"current\"][-1]"
+      "data_dict[\"currents\"][-1]"
      ],
      "language": "python",
      "metadata": {},
