--- a/lessons/thw-python/flow-control/python_flow_control.ipynb
+++ b/lessons/thw-python/flow-control/python_flow_control.ipynb
@@ -464,7 +464,7 @@
      "metadata": {},
      "source": [
       "## Short Exercise\n",
-      "Using a loop, calculate the factorial of 42 (the product of all integers up to and including 42)."
+      "Using a loop, calculate the factorial of 7 (the product of all positive integers up to and including 7)."
      ]
     },
     {
@@ -642,8 +642,8 @@
      "collapsed": true,
      "input": [
       "genos = ['AA', 'GG', 'AG', 'AG', 'GG']\n",
-      "genos_new = []\n",
-      "# Use your knowledge of if/else statements and loop structures below."
+      "genos_new = []  # define an empty list.  Your code needs to fill in the values.\n",
+      "# Your code goes here"
      ],
      "language": "python",
      "metadata": {},
@@ -671,7 +671,7 @@
      "metadata": {},
      "source": [
       "## Part 2:\n",
-      "Sometimes there are errors and the genotype cannot be determined. Adapt your code from above to deal with this problem (in this example missing data is assigned NA for \"Not Available\")."
+      "Sometimes there are errors and the genotype cannot be determined. Adapt your code from above to deal with this problem (in this example missing data is assigned NA for \"Not Available\").  **Note: the input and output variables have different names here and in the previous exercise.  Don't read from `genos_new`.**"
      ]
     },
     {
@@ -679,7 +679,7 @@
      "collapsed": true,
      "input": [
       "genos_w_missing = ['AA', 'NA', 'GG', 'AG', 'AG', 'GG', 'NA']\n",
-      "genos_w_missing_new = []\n",
+      "genos_w_missing_new = []   # define an empty list.  Your code needs to fill in the values.\n",
       "# The missing data should not be converted to a number, but remain 'NA' in the new list"
      ],
      "language": "python",
@@ -750,7 +750,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Python has another way to perform iteration called list comprehensions."
+      "Python has another way to perform iteration called list comprehensions.  These are succinct ways to perform routine initialization or setting of variables."
      ]
     },
     {
