typos: python -> Python

--- a/lessons/swc-python/python-01-functions.ipynb
+++ b/lessons/swc-python/python-01-functions.ipynb
@@ -1312,7 +1312,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If we want to call make_thumbnail_and_save() with filename and thumbnailname given as parameters, but not width, we have to explicitly tell python which parameters of those with default value we are passing. If we call"
+      "If we want to call make_thumbnail_and_save() with filename and thumbnailname given as parameters, but not width, we have to explicitly tell Python which parameters of those with default value we are passing. If we call"
      ]
     },
     {
@@ -1329,7 +1329,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "python thinks the second parameter is the second parameter of the function definition - the width - and tries to use 'littlebike.png' as image size and obviously fails. Therefore we have to tell python that the second parameter is the thumbnailname:"
+      "Python thinks the second parameter is the second parameter of the function definition - the width - and tries to use 'littlebike.png' as image size and obviously fails. Therefore we have to tell Python that the second parameter is the thumbnailname:"
      ]
     },
     {
@@ -1346,7 +1346,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Now python knows that it should use the default witdh and use the string als thumbnailname. This is especially helpful for functions with dozens of parameters, e.g. plotting routines or mathematical optimization functions."
+      "Now Python knows that it should use the default witdh and use the string als thumbnailname. This is especially helpful for functions with dozens of parameters, e.g. plotting routines or mathematical optimization functions."
      ]
     },
     {
