--- a/lessons/thw-python/flow-control/python_flow_control.ipynb
+++ b/lessons/thw-python/flow-control/python_flow_control.ipynb
@@ -322,7 +322,7 @@
       "elif x == 2:\n",
       "    print \"x is two\"\n",
       "else:\n",
-      "    print \"x is positive and greater than 2\""
+      "    print \"x is positive and is not 0, 1, or 2\""
      ],
      "language": "python",
      "metadata": {},
@@ -333,7 +333,38 @@
      "metadata": {},
      "source": [
       "## Aside About Indentation\n",
-      "The indentation is a feature of python syntax. Some other programming languages use brackets to denote a command block. Python uses indentation. The amount of indentation doesn't matter, so long as everything in the same block is indented the same amount.  "
+      "The indentation is a feature of python syntax. Some other programming languages use brackets to denote a command block. **Python uses indentation to recognize where conditional statements begin and end.**  This `if` has more than one statement in each block:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "x = 5\n",
+      "if x < 0:\n",
+      "    print \"x is negative\"\n",
+      "    print \"x is still negative\"\n",
+      "else:\n",
+      "    print \"x is nonnegative\"\n",
+      "    print \"x is still nonnegative\"\n",
+      "print \"But what is x?\""
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The last statement always prints, becuase it is not inside of either of the two indented blocks controlled by the `if`."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Python will recognize an indented block as long as everything in the same block is indented the same amount.  The PEP8 style guide recommends that you use four spaces."
      ]
     },
     {
@@ -362,7 +393,7 @@
       "    while <condition>:\n",
       "        <indented block of code>\n",
       "        \n",
-      "As long as the condition is True, the code in the block will continue to execute.  This may lead to infitinely executing loops!"
+      "As long as the condition is `True`, the code in the block will continue to execute.  This may lead to infitinely executing loops!"
      ]
     },
     {
@@ -387,8 +418,8 @@
       "\n",
       "    for <loop variable name> in <iterable>:\n",
       "         <indented block of code>\n",
-      "         \n",
-      "The loop will continue to execute as long as there are more iterations left in the iterable.  Upon each iteration, the value of that iteration is assigned to the loop variable."
+      "\n",
+      "Here `<loop variable name>` is the name of a **new** variable that the for loop will define on each iteration, and `<iterable>` is an object that knows how to give us its items in succession.  Lists, sets, file handles can be iterated over like this.  The `for` loop assigns `<loop variable name>` to the first value of `<iterable>` and runs the block of code.  It then gets the next value of `<iterable>` and runs the block again until `<iterable>` is exhausted."
      ]
     },
     {
@@ -403,6 +434,32 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "`range()` returns a list of integers from 0 to 5.  "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print range(6)\n",
+      "for i in range(6):\n",
+      "    print i"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "So we can use `range` to loop over the indexes of our variable.  This gives us both the items and their indexes."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": true,
      "input": [
@@ -415,6 +472,32 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "`zip()` is a function that takes two lists and returns a list of tuples.  "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "fruits = ['apples', 'oranges', 'pears', 'bananas']\n",
+      "prices = [0.49, 0.99, 1.49, 0.32]\n",
+      "print zip(fruits, prices)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We can use this list to go through both lists at the same time:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": true,
      "input": [
@@ -422,12 +505,18 @@
       "fruits = ['apples', 'oranges', 'pears', 'bananas']\n",
       "prices = [0.49, 0.99, 1.49, 0.32]\n",
       "for fruit, price in zip(fruits, prices):\n",
-      "    print fruit, \"cost\", price, \"each\"\n",
-      "    "
+      "    print fruit, \"cost\", price, \"each\"\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "`.items()` is a method defined for dictionaries that allows us to easily iterate over key, value pairs.  It returns a list of tuples `[(key1, value1), (key2, value2)...]`"
+     ]
     },
     {
      "cell_type": "code",
@@ -437,12 +526,18 @@
       "# Note the order is non-deterministic\n",
       "prices = {'apples': 0.49, 'oranges': 0.99, 'pears': 1.49, 'bananas': 0.32}\n",
       "for fruit, price in prices.items():\n",
-      "    print fruit, \"cost\", price, \"each\"\n",
-      "          "
+      "    print fruit, \"cost\", price, \"each\""
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We can even use the data to modify variables:"
+     ]
     },
     {
      "cell_type": "code",
@@ -481,7 +576,7 @@
      "source": [
       "## break, continue, and else\n",
       "\n",
-      "A break statement cuts off a loop from within an inner loop. It helps\n",
+      "A `break` statement causes a loop to stop iterating.  It helps\n",
       "avoid infinite loops by cutting off loops when they're clearly going\n",
       "nowhere."
      ]
@@ -504,8 +599,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Something you might want to do instead of breaking is to continue to the\n",
-      "next iteration of a loop, giving up on the current one."
+      "`continue` causes the loop to skip immediately to the next iteration,\n",
+      "without completing the rest of the commands in the indented block."
      ]
     },
     {
