Formated variable names properly removed typos

--- a/lessons/swc-python/python-01-functions.ipynb
+++ b/lessons/swc-python/python-01-functions.ipynb
@@ -513,7 +513,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Students use the concept of function stacks intuitively in a lot of situations. Imagine you're sitting in an exam where you have to solve math problems like ((1.02\\*4.96)+8.7\\*2.3\\*1.1)/3 only with pen and paper. But you're not supposed to write anything but the final solution on the solution sheet but you can use small pieces of draft paper. So you're computing intermediate results on draft paper, having one piece of paper for the first multiplication and one for the second, then copying their results on a different piece of paper for the addition and finally the division. All the intermediate computations and results are the different stack levels, where the local variables (the intermediate results) are discarded and only the final result is kept."
+      "Students use the concept of function stacks intuitively in a lot of situations. Imagine you're sitting in an exam where you have to solve math problems like `((1.02\\*4.96)+8.7\\*2.3\\*1.1)/3` only with pen and paper. But you're not supposed to write anything but the final solution on the solution sheet but you can use small pieces of draft paper. So you're computing intermediate results on draft paper, having one piece of paper for the first multiplication and one for the second, then copying their results on a different piece of paper for the addition and finally the division. All the intermediate computations and results are the different stack levels, where the local variables (the intermediate results) are discarded and only the final result is kept."
      ]
     },
     {
@@ -1312,7 +1312,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If we want to call make_thumbnail_and_save() with filename and thumbnailname given as parameters, but not width, we have to explicitly tell Python which parameters of those with default value we are passing. If we call"
+      "If we want to `call make_thumbnail_and_save()` with `filename` and `thumbnailname` given as parameters, but not `width`, we have to explicitly tell Python which parameters of those with default value we are passing. If we call"
      ]
     },
     {
@@ -1329,7 +1329,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Python thinks the second parameter is the second parameter of the function definition - the width - and tries to use 'littlebike.png' as image size and obviously fails. Therefore we have to tell Python that the second parameter is the thumbnailname:"
+      "Python thinks the second parameter is the second parameter of the function definition - `width` - and tries to use 'littlebike.png' as image size and obviously fails. Therefore we have to tell Python that the second parameter is `thumbnailname`:"
      ]
     },
     {
@@ -1346,7 +1346,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Now Python knows that it should use the default witdh and use the string als thumbnailname. This is especially helpful for functions with dozens of parameters, e.g. plotting routines or mathematical optimization functions."
+      "Now Python knows that it should use the default witdh and use the string as `thumbnailname`. This is especially helpful for functions with dozens of parameters, e.g. plotting routines or mathematical optimization functions."
      ]
     },
     {
