fixed formatting errors

--- a/lessons/swc-python/python-01-functions.ipynb
+++ b/lessons/swc-python/python-01-functions.ipynb
@@ -1312,7 +1312,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If we want to `call make_thumbnail_and_save()` with `filename` and `thumbnailname` given as parameters, but not `width`, we have to explicitly tell Python which parameters of those with default value we are passing. If we call"
+      "If we want to call `make_thumbnail_and_save()` with `filename` and `thumbnailname` given as parameters, but not `width`, we have to explicitly tell Python which parameters of those with default value we are passing. If we call"
      ]
     },
     {
@@ -1329,7 +1329,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Python thinks the second parameter is the second parameter of the function definition - `width` - and tries to use 'littlebike.png' as image size and obviously fails. Therefore we have to tell Python that the second parameter is `thumbnailname`:"
+      "Python thinks the second parameter is the second parameter of the function definition - `width` - and tries to use `'littlebike.png'` as image size and obviously fails. Therefore we have to tell Python that the second parameter is `thumbnailname`:"
      ]
     },
     {
