Spelling and markup

--- a/lessons/thw-python/flow-control/python_flow_control.ipynb
+++ b/lessons/thw-python/flow-control/python_flow_control.ipynb
@@ -34,7 +34,7 @@
      "source": [
       "# Boolean operators\n",
       "\n",
-      "Python comes with literal comparison operators.  Namely, `< > <= >= == !=`.  All comparisons return the literal boolean values: `True` or `False`.  These can be used to test values against one another. For example,"
+      "Python comes with literal comparison operators.  Namely, `< > <= >= == !=`.  All comparisons return the literal Boolean values: `True` or `False`.  These can be used to test values against one another. For example,"
      ]
     },
     {
@@ -139,7 +139,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "True == 'True'   # comparing a boolean and a string"
+      "True == 'True'   # comparing a Boolean and a string"
      ],
      "language": "python",
      "metadata": {},
@@ -200,7 +200,7 @@
       "    if <condition>:\n",
       "        <indented block of code>\n",
       "\n",
-      "The indented code will only be execute if the condition evaulates to `True`, which is a special boolean value."
+      "The indented code will only be execute if the condition evaluates to `True`, which is a special Boolean value."
      ]
     },
     {
@@ -291,7 +291,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "While there must be one if statetment, and there may be at most one else statement, there maybe as many elif statements as are desired.\n",
+      "While there must be one if statement, and there may be at most one else statement, there maybe as many elif statements as are desired.\n",
       "\n",
       "    if <if-condition>:\n",
       "        <if-block>\n",
@@ -322,7 +322,7 @@
       "elif x == 2:\n",
       "    print \"x is two\"\n",
       "else:\n",
-      "    print \"x is positive and is not 0, 1, or 2\""
+      "    print \"x is positive and is not equal to 0, 1, or 2\""
      ],
      "language": "python",
      "metadata": {},
@@ -333,7 +333,7 @@
      "metadata": {},
      "source": [
       "## Aside About Indentation\n",
-      "The indentation is a feature of python syntax. Some other programming languages use brackets to denote a command block. **Python uses indentation to recognize where conditional statements begin and end.**  This `if` has more than one statement in each block:"
+      "The indentation is a feature of Python syntax. Some other programming languages use brackets to denote a command block. **Python uses indentation to recognize blocks of code that are part of conditional statements and loops.**   The end of the indentation (that is, the first line that has the same indentation level as the `if`) indicates the end of the block subject to the `if`'s control.  This `if` has more than one statement in each block:"
      ]
     },
     {
@@ -357,14 +357,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The last statement always prints, becuase it is not inside of either of the two indented blocks controlled by the `if`."
+      "The last statement always prints, because it is not inside of either of the two indented blocks controlled by the `if`."
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Python will recognize an indented block as long as everything in the same block is indented the same amount.  The PEP8 style guide recommends that you use four spaces."
+      "Python will recognize an indented block as long as everything in the same block is indented the same amount.  The [Python Style Guide (PEP8)](http://www.python.org/dev/peps/pep-0008/)  recommends that you use four spaces."
      ]
     },
     {
@@ -393,7 +393,7 @@
       "    while <condition>:\n",
       "        <indented block of code>\n",
       "        \n",
-      "As long as the condition is `True`, the code in the block will continue to execute.  This may lead to infitinely executing loops!"
+      "As long as the condition is `True`, the code in the block will continue to execute.  This may lead to infinitely executing loops!"
      ]
     },
     {
@@ -419,7 +419,7 @@
       "    for <loop variable name> in <iterable>:\n",
       "         <indented block of code>\n",
       "\n",
-      "Here `<loop variable name>` is the name of a **new** variable that the for loop will define on each iteration, and `<iterable>` is an object that knows how to give us its items in succession.  Lists, sets, file handles can be iterated over like this.  The `for` loop assigns `<loop variable name>` to the first value of `<iterable>` and runs the block of code.  It then gets the next value of `<iterable>` and runs the block again until `<iterable>` is exhausted."
+      "Here `<loop variable name>` is the name of a **new** variable that the for loop will define on each iteration, and `<iterable>` is an object that knows how to give us its items in succession.  Lists, sets, and file handles can be iterated over like this.  The `for` loop assigns `<loop variable name>` to the first value of `<iterable>` and runs the block of code.  It then gets the next value of `<iterable>` and runs the block again until `<iterable>` is exhausted."
      ]
     },
     {
@@ -456,7 +456,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "So we can use `range` to loop over the indexes of our variable.  This gives us both the items and their indexes."
+      "Since `range()` returns a list, we can use it to count from 0 to `len(fruits)-1`, and use these numbers to access the contents of the list `fruits`.   This loop prints both the items and their indexes."
      ]
     },
     {
@@ -576,7 +576,7 @@
      "source": [
       "## break, continue, and else\n",
       "\n",
-      "A `break` statement causes a loop to stop iterating.  It helps\n",
+      "A `break` statement causes a loop to stop iterating immediately, without finishing the current block.  It helps\n",
       "avoid infinite loops by cutting off loops when they're clearly going\n",
       "nowhere."
      ]
@@ -599,7 +599,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "`continue` causes the loop to skip immediately to the next iteration,\n",
+      "`continue` causes the loop to skip immediately to the beginning of the next iteration,\n",
       "without completing the rest of the commands in the indented block."
      ]
     },
