--- a/lessons/thw-python/functions-modules/python_functions_and_modules.ipynb
+++ b/lessons/thw-python/functions-modules/python_functions_and_modules.ipynb
@@ -18,14 +18,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Materials by: [John Blischak](https://github.com/jdblischak \"GitHub\") and other Software Carpentry instructors (Joshua R. Smith, Milad Fatenejad, Katy Huff, Tommy Guy and many more)"
+      "Materials by: [John Blischak](https://github.com/jdblischak \"GitHub\") and other Software Carpentry instructors (Joshua R. Smith, Milad Tonged, Katy Huff, Tommy Guy and many more)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "As you saw in the last lesson, computers are very useful for doing the same operation over and over. When you know you will be performing the same operation many times, it is best to abstract this functionality into a function (aka method). For example, you used the function `open` in an earlier section. This allowed you to easily open a conncetion to a file without worrying about the underlying code that made it possible (this idea is known as abstraction).   "
+      "As you saw in the last lesson, computers are very useful for doing the same operation over and over. When you know you will be performing the same operation many times, it is best to abstract this functionality into a function (aka method). For example, you used the function `open` in an earlier section. This allowed you to easily open a connection to a file without worrying about the underlying code that made it possible (this idea is known as abstraction).   "
      ]
     },
     {
