--- a/lessons/thw-python/vars-types/variables.ipynb
+++ b/lessons/thw-python/vars-types/variables.ipynb
@@ -120,7 +120,7 @@
       "\n",
       "\n",
       "\n",
-      "IPython has more useful features for interactive use than the standard python interpreter, but it works in the same way--it is interacitve, and you get there from the command line.  IPython Notebook uses javascript to allow you to enter python commands in your browser and show you the result in the browser.  We'll use it from here on out."
+      "IPython has more useful features for interactive use than the standard python interpreter, but it works in the same way--it is interactive, and you get there from the command line.  IPython Notebook uses javascript to allow you to enter python commands in your browser and show you the result in the browser.  We'll use it from here on out."
      ]
     },
     {
@@ -179,7 +179,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "You can enter the same line over and over again into the interpreter.  It's wierd, but it's life. "
+      "You can enter the same line over and over again into the interpreter.  It's weird, but it's life. "
      ]
     },
     {
@@ -270,7 +270,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If you wanted to see all the built-in commands available for something, use the *dir* command. Check out all of the methods of the object \"Hello world\", which are shared by all objects of the str type."
+      "If you wanted to see all the built-in commands available for something, use the `dir` command. Check out all of the methods of the object \"Hello world\", which are shared by all objects of the str type."
      ]
     },
     {
@@ -287,7 +287,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "There's a method that looks important -- swapcase.  Let's see what it does:  "
+      "There's a method that looks important -- `swapcase()`.  Let's see what it does:  "
      ]
     },
     {
@@ -313,7 +313,7 @@
      "source": [
       "## Executing code in files\n",
       "\n",
-      "If your code is in a file, you can execute it from the IPython shell with the **%run** command. Execute hello.py like so"
+      "If your code is in a file, you can execute it from the IPython shell with the **%run** command. Execute `hello.py` like so"
      ]
     },
     {
@@ -379,7 +379,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Note that the error message contains a recap of the input that caused the error (with an arrow, no less!)   It is objecting that **mystring** is not defined, since we just reset it.\n",
+      "Note that the error message contains a recap of the input that caused the error (with an arrow, no less!)   It is objecting that `mystring` is not defined, since we just reset it.\n",
       "\n",
       "## Variables\n",
       "\n",
@@ -526,7 +526,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Lets assign a value of 2.7 (which is clearly a float) to voltage. What happens to the type?"
+      "Lets assign a value of 2.7 (which is clearly a float) to `voltage`. What happens to the type?"
      ]
     },
     {
@@ -553,7 +553,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "You can even now assign a string to the variable voltage and python would be happy to comply."
+      "You can even now assign a string to the variable `voltage` and python would be happy to comply."
      ]
     },
     {
@@ -580,7 +580,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "I'll let you ruminate on the pros and cons of this construction while I change the value of voltage back to an int:"
+      "I'll let you ruminate on the pros and cons of this construction while I change the value of voltage back to an `int`:"
      ]
     },
     {
@@ -599,7 +599,7 @@
      "source": [
       "## Exercise\n",
       "\n",
-      "Assign three variables, called `versionnumber`, `numberofpythons`, and `thenumberten` with the values 2, 6, and \"ten\" with the types float, int, and string respectively."
+      "Assign three variables, called `versionnumber`, `numberofpythons`, and `thenumberten` with the values 2, 6, and \"ten\" with the types `float`, `int`, and `str` respectively."
      ]
     },
     {
@@ -748,7 +748,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "What would happen if you tried to coerce `resistance_string` to an int? What about coercing resistance to an int? Consider the following:"
+      "What would happen if you tried to coerce `resistance_string` to an int? What about coercing `resistance` to an int? Consider the following:"
      ]
     },
     {
@@ -1230,7 +1230,7 @@
       "\n",
       "\n",
       "\n",
-      "For what its worth, you don't need to have a variable to use the upper() method, you could use it on the string itself."
+      "For what its worth, you don't need to have a variable to use the `.upper()` method, you could use it on the string itself."
      ]
     },
     {
