--- a/lessons/thw-python/functions-and-modules/python_functions_and_modules.ipynb
+++ b/lessons/thw-python/functions-and-modules/python_functions_and_modules.ipynb
@@ -53,7 +53,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# parsing a line from a comma-delimted file\n",
+      "# parsing a line from a comma-delimited file\n",
       "lotto_numbers = '4,8,15,16,23,42\\n'\n",
       "lotto_numbers = lotto_numbers.strip()\n",
       "print lotto_numbers.split(',')"
@@ -136,7 +136,7 @@
      "metadata": {},
      "source": [
       "# Creating your own functions!\n",
-      "When there is not an available function to perform a task, you can write your own functions.  Ths simplest functions have the  following format in Python:\n",
+      "When there is not an available function to perform a task, you can write your own functions.  The simplest functions have the  following format in Python:\n",
       "\n",
       "    def <function name>():\n",
       "        <function body>"
@@ -157,7 +157,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "However, this often isn't very useful since we haven't returned any values from this function.  Note: that if you don't return anything from a function in Python, you implcitly have returned the special `None` singleton.  To return vaulues that you computed locally in the function body, use the **return** keyword.\n",
+      "However, this often isn't very useful since we haven't returned any values from this function.  Note: that if you don't return anything from a function in Python, you implicitly have returned the special `None` singleton.  To return values that you computed locally in the function body, use the **return** keyword.\n",
       "\n",
       "    def <function name>():\n",
       "        <function body>\n",
@@ -174,7 +174,7 @@
       "        <function body>\n",
       "        return <local variable 1>  \n",
       "        \n",
-      "The function name, arguments, and retun are jointly known as the **function signature** since the uniquely define the function's **interface**."
+      "The function name, arguments, and return are jointly known as the **function signature** since the uniquely define the function's **interface**."
      ]
     },
     {
@@ -340,7 +340,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "You can also call any functions with their arguments, regular and keyword, with their argument names explictly in the call.  This uses equal signs in the same way that keyword arguments are defined."
+      "You can also call any functions with their arguments, regular and keyword, with their argument names explicitly in the call.  This uses equal signs in the same way that keyword arguments are defined."
      ]
     },
     {
@@ -493,7 +493,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Not just lists, but any sequence is allowed to be expanded in this way.  While this works for normal arguments, keyword arguments are more similar to dictionaries.  Therefore any mapping is also able to be expanded into keyword arguments.  To distingush keyword argument unpacking from unpacking normal arguments, you must use a double asterisk `**` to unpack a dictionary."
+      "Not just lists, but any sequence is allowed to be expanded in this way.  While this works for normal arguments, keyword arguments are more similar to dictionaries.  Therefore any mapping is also able to be expanded into keyword arguments.  To distinguish keyword argument unpacking from unpacking normal arguments, you must use a double asterisk `**` to unpack a dictionary."
      ]
     },
     {
@@ -1139,7 +1139,7 @@
      "metadata": {},
      "source": [
       "# Longer exercise: Reading Cochlear implant into Python\n",
-      "For this exercise we will return to the cochlear implant data first introduced in the section on the shell. In order to analyse the data, we need to import the data into Python. Furthermore, since this is something that would have to be done many times, we will write a function to do this. As before, beginners should aim to complete Part 1 and more advanced participants should try to complete Part 2 and Part 3 as well."
+      "For this exercise we will return to the cochlear implant data first introduced in the section on the shell. In order to analyze the data, we need to import the data into Python. Furthermore, since this is something that would have to be done many times, we will write a function to do this. As before, beginners should aim to complete Part 1 and more advanced participants should try to complete Part 2 and Part 3 as well."
      ]
     },
     {
@@ -1305,7 +1305,7 @@
       "\n",
       "* Convert C to G\n",
       "\n",
-      "Hint: You can iterate through a string using a for loop similary to how you loop through a list."
+      "Hint: You can iterate through a string using a for loop similarly to how you loop through a list."
      ]
     },
     {
