More code markup

--- a/lessons/thw-python/flow-control/python_flow_control.ipynb
+++ b/lessons/thw-python/flow-control/python_flow_control.ipynb
@@ -259,7 +259,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Many cases may be tested by using the **elif** statement.  These come between all the if and else statements:\n",
+      "Many cases may be tested by using the **elif** statement.  These come between all the `if` and `else` statements:\n",
       "\n",
       "    if <if-condition>:\n",
       "        <if-block>\n",
@@ -291,7 +291,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "While there must be one if statement, and there may be at most one else statement, there maybe as many elif statements as are desired.\n",
+      "While there must be one `if` statement, and there may be at most one `else` statement, there may be as many `elif` statements as are desired.\n",
       "\n",
       "    if <if-condition>:\n",
       "        <if-block>\n",
@@ -372,7 +372,7 @@
      "metadata": {},
      "source": [
       "## Exercise\n",
-      "Write an if statement that prints whether x is even or odd."
+      "Write an `if` statement that prints whether x is even or odd."
      ]
     },
     {
@@ -648,7 +648,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We can loop through the dict of names and titles and do one of two different things for each by putting an if statement inside the for loop:"
+      "We can loop through the dict of names and titles and do one of two different things for each by putting an `if` statement inside the `for` loop:"
      ]
     },
     {
