--- a/lessons/thw-python/vars-types/variables.ipynb
+++ b/lessons/thw-python/vars-types/variables.ipynb
@@ -748,14 +748,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "What would happen if you tried to coerce `resistance_string` to an int? What about coercing `resistance` to an int? Consider the following:"
+      "What would happen if you tried to coerce `resistance_string` to an `int`? What about coercing `resistance` to an `int`? Consider the following:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "resistance_string = \"4.0 Ohms\""
+      "resistance_string = \"4.2 ohms\""
      ],
      "language": "python",
      "metadata": {},
