Incorporated changes suggested by @wltrimbl, @mattphotonman and @ahmadia

--- a/lessons/swc-python/python-08-numpy.ipynb
+++ b/lessons/swc-python/python-08-numpy.ipynb
@@ -1635,7 +1635,7 @@
       "\n",
       "has value 0/2 + 0/4 + 1/8. These two fractions have identical values, the only difference being that the first is written in base 10 fractional notation, and the second in base 2.\n",
       "\n",
-      "Unfortunately, most numbers cannot be represented exactly as fractions in any base, decimal or binary. As a consequence, the decimal floating-point numbers you enter are generally only approximated by the binary floating-point numbers actually stored in the machine. It\u2019s easy to forget that the stored value is an approximation, because of the way that floats are displayed at the interpreter prompt. Python only prints a decimal approximation to the true decimal value of the binary approximation stored by the machine. If Python were to print the true decimal value of the binary approximation stored for 0.1, it would have to display\n",
+      "Unfortunately, most numbers cannot be represented exactly as fractions in any base, decimal or binary. As a consequence, the decimal floating-point numbers you enter are generally only approximated by the binary floating-point numbers actually stored in the machine. It\u2019s easy to forget that the stored value is an approximation, because of the way that floats are displayed at the interpreter prompt. Python only prints a decimal approximation to the true decimal value of the binary approximation stored by the machine. If Python were to print the exact decimal value of the binary approximation stored for 0.1, it would have to display\n",
       "\n",
       "0.1000000000000000055511151231257827021181583404541015625\n",
       "\n",
@@ -1736,9 +1736,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This result brings us to the first rule of floating point arithmetic: never use `==` (or `!=`) on floating point numbers. Instead, it is better to check whether two values are within some tolerance, and if they are, treat them as equal. NumPy provides some very convenient tools for doing this, which typically allow you to define the tolerance in terms of the absolute and/or relative error. The [absolute error](glossary.html#aboslute-error) (`atol`) in some approximation is simply the absolute value of the difference between the actual value and the approximation. The [relative error](glossary.html#relative-error) (`rtol`), on the other hand, is the ratio of the absolute error to the value we're approximating. For example, if we're off by 1 in approximating 8+1 and 56+1, the absolute error is the same in both cases, but the relative error in the first case is 1/9 = 11%, while in the second case it is only 1/57 = 1.7%. When we're thinking about floating point numbers, relative error is almost always more useful than absolute error. After all, it makes little sense to say that we're off by a hundreth when the value in question is a billionth. \n",
+      "This result brings us to the first rule of floating point arithmetic: never use `==` (or `!=`) on floating point numbers. Instead, it is better to check whether two values are within some tolerance, and if they are, treat them as equal. \n",
       "\n",
-      "Let's now go ahead and re-test `add_one_tenth`, using a NumPy method that checks whether two arrays are element-wise equal within a specified tolerance. More specifically, if the following equation is element-wise `True`, then `np.allclose` returns `True`.\n",
+      "NumPy provides some very convenient tools for doing this, which typically allow you to define the tolerance in terms of the absolute and/or relative error. The [absolute error](glossary.html#aboslute-error) (`atol`) in some approximation is simply the absolute value of the difference between the actual value and the approximation. The [relative error](glossary.html#relative-error) (`rtol`), on the other hand, is the ratio of the absolute error to the value we're approximating. For example, if we're off by 1 in approximating 8+1 and 56+1, the absolute error is the same in both cases, but the relative error in the first case is 1/9 = 11%, while in the second case it is only 1/57 = 1.7%. When we're thinking about floating point numbers, relative error is almost always more useful than absolute error. After all, it makes little sense to say that we're off by a hundreth when the value in question is a billionth. \n",
+      "\n",
+      "Let's now go ahead and write a better test for `add_one_tenth`. The `np.allclose` method tests whether two arrays are element-wise equal within a specified tolerance. More specifically, if the following equation is element-wise `True`, then `np.allclose` returns `True`.\n",
       "\n",
       "    absolute(a - b) <= (atol + rtol * absolute(b)) "
      ]
@@ -1774,7 +1776,7 @@
      "collapsed": false,
      "input": [
       "def arccos_to_deg(values):\n",
-      "    \"\"\"Calulate the arccosine and give result in degrees (not radians)\"\"\"\n",
+      "    \"\"\"Calculate the arccosine and give result in degrees (not radians)\"\"\"\n",
       "    \n",
       "    answer_radians = np.arccos(values)\n",
       "    \n",
@@ -1834,7 +1836,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The relative error associated with this expression is very small, however it's significant because arccosine is only defined over the range [-1.0,  1.0]. If we pass this derived input value to our simple trigonometic function, it now returns `nan`. This is NumPy's way of representing an undefined or unrepresentable value (and stands for \"not a number\").   "
+      "The relative error associated with this expression is very small, however it's significant because arccosine is only defined over the range [-1.0,  1.0]. If we pass this derived input value to our simple trigonometic function, it now returns `nan`. This is the standard way computers represent an undefined or unrepresentable value (and stands for \"not a number\").   "
      ]
     },
     {
