spelling and capitalization

--- a/lessons/thw-python/data-structures/data_structures.ipynb
+++ b/lessons/thw-python/data-structures/data_structures.ipynb
@@ -494,7 +494,7 @@
       "\n",
       "\n",
       "\n",
-      "The python set type is similar to the idea of a mathematical set: it is an unordered collection of unique things. Consider:"
+      "The Python set type is similar to the idea of a mathematical set: it is an unordered collection of unique things. Consider:"
      ]
     },
     {
