--- a/lessons/thw-python/vars-types/variables.ipynb
+++ b/lessons/thw-python/vars-types/variables.ipynb
@@ -1192,7 +1192,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "There are other operations defined on string data. Use the `dir` comnand to find them. One example I'll show is the `.upper()` method. Lets take a look at the documentation."
+      "There are other operations defined on string data. Use the `dir` command to find them. One example I'll show is the `.upper()` method. Lets take a look at the documentation."
      ]
     },
     {
