--- a/lessons/thw-python/functions-modules/python_functions_and_modules.ipynb
+++ b/lessons/thw-python/functions-modules/python_functions_and_modules.ipynb
@@ -18,14 +18,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Materials by: [John Blischak](https://github.com/jdblischak \"GitHub\") and other Software Carpentry instructors (Joshua R. Smith, Milad Fatenejad, Katy Huff, Tommy Guy and many more)"
+      "Materials by: [John Blischak](https://github.com/jdblischak \"GitHub\"), Anthony Scopatz, and other Software Carpentry instructors (Joshua R. Smith, Milad Tonged, Katy Huff, Tommy Guy and many more)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "As you saw in the last lesson, computers are very useful for doing the same operation over and over. When you know you will be performing the same operation many times, it is best to abstract this functionality into a function (aka method). For example, you used the function `open` in an earlier section. This allowed you to easily open a conncetion to a file without worrying about the underlying code that made it possible (this idea is known as abstraction).   "
+      "Computers are very useful for doing the same operation over and over. When you know you will be performing the same operation many times, it is best to encapsulate this similar code into a function or a method.  Programming functions are related to mathematical functions, e.g. $f(x)$, and it is helpful to think of them as abstract operators that produce output given some input. Let's look at some examples to solidify this concept."
      ]
     },
     {
@@ -52,9 +52,10 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# parsing a line from a comma-delimted file\n",
+      "# parsing a line from a comma-delimited file\n",
       "lotto_numbers = '4,8,15,16,23,42\\n'\n",
-      "lotto_numbers.strip().split(',')"
+      "lotto_numbers = lotto_numbers.strip()\n",
+      "print lotto_numbers.split(',')"
      ],
      "language": "python",
      "metadata": {},
@@ -65,7 +66,11 @@
      "collapsed": false,
      "input": [
       "question = '%H%ow%z%d%@d%z%th%ez$%@p%ste%rzb%ur%nz%$%@szt%on%gue%?%'\n",
-      "print question.replace('%', '').replace('@', 'i').replace('$', 'h').replace('z', ' ')"
+      "question = question.replace('%', '')\n",
+      "question = question.replace('@', 'i')\n",
+      "question = question.replace('$', 'h')\n",
+      "question = question.replace('z', ' ')\n",
+      "print question"
      ],
      "language": "python",
      "metadata": {},
@@ -130,7 +135,32 @@
      "metadata": {},
      "source": [
       "# Creating your own functions!\n",
-      "When there is not an available function to perform a task, you can write your own functions."
+      "When there is not an available function to perform a task, you can write your own functions.  The simplest functions have the  following format in Python:\n",
+      "\n",
+      "    def <function name>():\n",
+      "        <function body>"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def do_nothing():\n",
+      "    s = \"I don't do much\""
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "However, this often isn't very useful since we haven't returned any values from this function.  Note: that if you don't return anything from a function in Python, you implicitly have returned the special `None` singleton.  To return values that you computed locally in the function body, use the **return** keyword.\n",
+      "\n",
+      "    def <function name>():\n",
+      "        <function body>\n",
+      "        return <local variable 1>    "
      ]
     },
     {
@@ -138,21 +168,57 @@
      "collapsed": true,
      "input": [
       "def square(x):\n",
-      "    return x * x"
+      "    sqr = x * x\n",
+      "    return sqr"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Using a function is done by placing parentheses `()` after the function name after you have defined it.  This is known as **calling** the function.  If the function requires arguments, the values for these arguments are inside of the parentheses."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print square(2), square(square(2))"
+      "print square(2)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Like mathematical functions, you can compose a function with other functions or with itself!"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print square(square(2))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Functions may be defined such that they have multiple arguments or multiple return values:\n",
+      "\n",
+      "    def <function name>(<arg1>, <arg2>, ...):\n",
+      "        <function body>\n",
+      "        return <var1> , <var2>, ..."
+     ]
     },
     {
      "cell_type": "code",
@@ -160,7 +226,6 @@
      "input": [
       "def hello(time, name):\n",
       "    \"\"\"Print a nice message. Time and name should both be strings.\n",
-      "    \n",
       "    Example: hello('morning', 'Software Carpentry')\n",
       "    \"\"\"\n",
       "    print 'Good ' + time + ', ' + name + '!'"
@@ -191,7 +256,7 @@
      "metadata": {},
      "source": [
       "## Short exercise: Write a function to calculate GC content of DNA\n",
-      "Make a function that calculate the GC content of a given DNA sequence. For the more advanced participants, make your function able to handle sequences of mixed case (see the third test case)."
+      "Make a function that calculates the GC content of a given DNA sequence. For the more advanced participants, make your function able to handle sequences of mixed case (see the third test case)."
      ]
     },
     {
@@ -258,7 +323,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print dir(math) # See a list of everything in the math module"
+      "dir(math) # See a list of everything in the math module"
      ],
      "language": "python",
      "metadata": {},
@@ -352,7 +417,7 @@
      "metadata": {},
      "source": [
       "# Longer exercise: Reading Cochlear implant into Python\n",
-      "For this exercise we will return to the cochlear implant data first introduced in the section on the shell. In order to analyse the data, we need to import the data into Python. Furthermore, since this is something that would have to be done many times, we will write a function to do this. As before, beginners should aim to complete Part 1 and more advanced participants should try to complete Part 2 and Part 3 as well."
+      "For this exercise we will return to the cochlear implant data first introduced in the section on the shell. In order to analyze the data, we need to import the data into Python. Furthermore, since this is something that would have to be done many times, we will write a function to do this. As before, beginners should aim to complete Part 1 and more advanced participants should try to complete Part 2 and Part 3 as well."
      ]
     },
     {
@@ -518,7 +583,7 @@
       "\n",
       "* Convert C to G\n",
       "\n",
-      "Hint: You can iterate through a string using a for loop similary to how you loop through a list."
+      "Hint: You can iterate through a string using a for loop similarly to how you loop through a list."
      ]
     },
     {
